# LearnOpenGLWithRust

./: .gitignore  Cargo.toml  README.md  run.sh
demo/: demo10_box_dir.fs  demo10_box_specular_map_dir.fs  demo11_box_point.fs  demo11_box_specular_map_point.fs  demo12_box_flashlight.fs  demo12_box_specular_map_flashlight.fs  demo13_multiple_lights.fs  demo15.vs  demo15_monocol.fs  demo18_norm.vs  demo1_simple_two_layouts.fs  demo1_simple_two_layouts.vs  demo1_simplest.fs  demo1_simplest.vs  demo1_simplest_col.fs  demo2_texture_disco.fs  demo2_texture_mix.fs  demo2_texture_simple.fs  demo2_texture_simple.vs  demo3_tex_mix.fs  demo4_tex_mix.fs  demo7_box.fs  demo7_box.vs  demo9_box.fs  demo9_box.vs  demo9_box_specular_map.fs
src/: lib.rs  main.rs
src/demos/: common.rs  demo1.rs  demo10.rs  demo11.rs  demo12.rs  demo13.rs  demo14.rs  demo15.rs  demo16.rs  demo17.rs  demo18.rs  demo19.rs  demo2.rs  demo20.rs  demo21.rs  demo3.rs  demo4.rs  demo5.rs  demo6.rs  demo7.rs  demo8.rs  demo9.rs  mod.rs
src/gfx/: camera.rs  framebuffer.rs  glutils.rs  lights.rs  matutils.rs  mod.rs  models.rs  shaders.rs  system.rs  utils.rs
